--- a/ecotech2/src/main/resources/templates/index.html
+++ b/ecotech2/src/main/resources/templates/index.html
@@ -21,21 +21,21 @@
             </form>
 
             <div class="icons">
-                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                <a href="#"><i class="fa-solid fa-heart"></i></a>
+                <a href="/ecotech/cliente/carrinho"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="/ecotech/cliente/favorito"><i class="fa-solid fa-heart"></i></a>
                 
                 <div class="dropdown">
                     <a  class="dropdown-button"><i class="fa-solid fa-bars"></i></a>
                     <div class="dropdown-content">
-                        <a href="#">Smartphones</a>
-                        <a href="#">Notebooks</a>
-                        <a href="#">Smartwatches e Buds</a>
-                        <a href="#">Tablets</a>
-                        <a href="#">Acessórios</a>
-                        <a href="#">TV e AV</a>
-                        <a href="#">Eletrodomésticos</a>
-                        <a href="#">Monitores</a>
-                        <a href="#">Ar-condicionádos</a>
+                        <a href="/ecotech/cliente/categoria">Smartphones</a>
+                        <a href="/ecotech/cliente/categoria">Notebooks</a>
+                        <a href="/ecotech/cliente/categoria">Smartwatches e Buds</a>
+                        <a href="/ecotech/cliente/categoria">Tablets</a>
+                        <a href="/ecotech/cliente/categoria">Acessórios</a>
+                        <a href="/ecotech/cliente/categoria">TV e AV</a>
+                        <a href="/ecotech/cliente/categoria">Eletrodomésticos</a>
+                        <a href="/ecotech/cliente/categoria">Monitores</a>
+                        <a href="/ecotech/cliente/categoria">Ar-condicionádos</a>
                     </div>
                 </div>
                 
@@ -97,7 +97,7 @@
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
+                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
                     <br>
                 </div>
@@ -106,7 +106,7 @@
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
+                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
                     <br>
                 </div>
@@ -115,7 +115,7 @@
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
+                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
                     <br>
                 </div>
@@ -131,14 +131,14 @@
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
+                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                 </div>
                 <div class="inicio_itenContent">
                     <img src="/img/img1.jpg" alt="">
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
+                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
                     <br>
                 </div>
@@ -147,7 +147,7 @@
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
+                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
                     <br>
                 </div>
@@ -156,7 +156,7 @@
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
+                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
                     <br>
                 </div>
@@ -172,14 +172,14 @@
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
+                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                 </div>
                 <div class="inicio_itenContent">
                     <img src="/img/img1.jpg" alt="">
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
+                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
                     <br>
                 </div>
@@ -188,7 +188,7 @@
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
+                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
                     <br>
                 </div>
@@ -197,7 +197,7 @@
                     <h3>Nome produto</h3>
                     <p>R$00.00</p>
                     <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
+                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
                     <br>
                 </div>
