--- a/ecotech2/src/main/resources/templates/EditarPerfil.html
+++ b/ecotech2/src/main/resources/templates/EditarPerfil.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="header_green"> <a href="#">Seja bem vindo de volta <i>nome usuário</i></a> </div>
+        <div class="header_green"> <a th:href="@{/ecotech/cliente/index}">Home</a> </div>
         <div class="header_black">
             <img src="/img/echoTech2.png" id="logo">
             <form>
@@ -21,24 +21,24 @@
             </form>
 
             <div class="icons">
-                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                <a href="#"><i class="fa-solid fa-heart"></i></a>
+                <a href="/ecotech/cliente/carrinho"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="/ecotech/cliente/favorito"><i class="fa-solid fa-heart"></i></a>
                 
                 <div class="dropdown">
                     <a  class="dropdown-button"><i class="fa-solid fa-bars"></i></a>
                     <div class="dropdown-content">
-                        <a href="#">Smartphones</a>
-                        <a href="#">Notebooks</a>
-                        <a href="#">Smartwatches e Buds</a>
-                        <a href="#">Tablets</a>
-                        <a href="#">Acessórios</a>
-                        <a href="#">TV e AV</a>
-                        <a href="#">Eletrodomésticos</a>
-                        <a href="#">Monitores</a>
-                        <a href="#">Ar-condicionádos</a>
+                        <a href="/ecotech/cliente/categoria">Smartphones</a>
+                        <a href="/ecotech/cliente/categoria">Notebooks</a>
+                        <a href="/ecotech/cliente/categoria">Smartwatches e Buds</a>
+                        <a href="/ecotech/cliente/categoria">Tablets</a>
+                        <a href="/ecotech/cliente/categoria">Acessórios</a>
+                        <a href="/ecotech/cliente/categoria">TV e AV</a>
+                        <a href="/ecotech/cliente/categoria">Eletrodomésticos</a>
+                        <a href="/ecotech/cliente/categoria">Monitores</a>
+                        <a href="/ecotech/cliente/categoria">Ar-condicionádos</a>
                     </div>
                 </div>
-    
+                
             </div>
             
         </div>
@@ -126,9 +126,9 @@
             <div class="footer-section">
                 <h3>Formas de Pagamento</h3>
                 <ul class="payment-icons">
-                    <img src="../static/img/mastercard.png" alt="Visa">
-                    <img src="../static/img/visa.png" alt="MasterCard">
-                    <img src="../static/img/pix.png" alt="MasterCard">
+                    <img src="/img/mastercard.png" alt="Visa">
+                    <img src="/img/visa.png" alt="MasterCard">
+                    <img src="/img/pix.png" alt="MasterCard">
                 </ul>
             </div>
         </div>
