--- a/ecotech2/src/main/resources/templates/busca.html
+++ b/ecotech2/src/main/resources/templates/busca.html
@@ -44,25 +44,27 @@
             </form>
 
             <div class="icons">
-                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                <a href="#"><i class="fa-solid fa-heart"></i></a>
+                <a href="/ecotech/cliente/carrinho"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="/ecotech/cliente/favorito"><i class="fa-solid fa-heart"></i></a>
                 
                 <div class="dropdown">
                     <a  class="dropdown-button"><i class="fa-solid fa-bars"></i></a>
                     <div class="dropdown-content">
-                        <a href="#">Smartphones</a>
-                        <a href="#">Notebooks</a>
-                        <a href="#">Smartwatches e Buds</a>
-                        <a href="#">Tablets</a>
-                        <a href="#">Acessórios</a>
-                        <a href="#">TV e AV</a>
-                        <a href="#">Eletrodomésticos</a>
-                        <a href="#">Monitores</a>
-                        <a href="#">Ar-condicionádos</a>
+                        <a href="/ecotech/cliente/categoria">Smartphones</a>
+                        <a href="/ecotech/cliente/categoria">Notebooks</a>
+                        <a href="/ecotech/cliente/categoria">Smartwatches e Buds</a>
+                        <a href="/ecotech/cliente/categoria">Tablets</a>
+                        <a href="/ecotech/cliente/categoria">Acessórios</a>
+                        <a href="/ecotech/cliente/categoria">TV e AV</a>
+                        <a href="/ecotech/cliente/categoria">Eletrodomésticos</a>
+                        <a href="/ecotech/cliente/categoria">Monitores</a>
+                        <a href="/ecotech/cliente/categoria">Ar-condicionádos</a>
                     </div>
                 </div>
                 
             </div>
+            
+        </div>
             
         </div>
     </header>
@@ -72,22 +74,22 @@
             <div class="search_itenContent">
                 <img src="\img\img3.jpg" alt="Produto 1" class="product-image">
                 <p>Produto 1</p>
-               <a href="#" class="view-button">Visualizar Produto</a>    
+               <a href="/ecotech/cliente/visualizar" class="view-button">Visualizar Produto</a>    
             </div><br>
             <div class="search_itenContent">
                 <img src="\img3.jpg" alt="Produto 2" class="product-image">
                 <p>Produto 2</p>
-                <a href="#" class="view-button">Visualizar Produto</a>  
+                <a href="/ecotech/cliente/visualizar" class="view-button">Visualizar Produto</a>  
             </div><br>
             <div class="search_itenContent">
                 <img src="\img3.jpg" alt="Produto 3" class="product-image">
                 <p>Produto 3</p>
-                <a href="#" class="view-button">Visualizar Produto</a>  
+                <a href="/ecotech/cliente/visualizar" class="view-button">Visualizar Produto</a>  
             </div><br>
             <div class="search_itenContent">
                 <img src="\img3.jpg" alt="Produto 4" class="product-image">
                 <p>Produto 4</p>
-                <a href="#" class="view-button">Visualizar Produto</a>  
+                <a href="/ecotech/cliente/visualizar" class="view-button">Visualizar Produto</a>  
             </div>
             <br><br><br><br>
         </div>
