--- a/ecotech2/src/main/resources/templates/Login.html
+++ b/ecotech2/src/main/resources/templates/Login.html
@@ -29,7 +29,7 @@
                             <i id="toggleIcon" class="fas fa-eye"></i>
                         </span>
                         <a href="/ecotech/cliente/novo-cliente" class="esqueci-senha"><br>Criar Conta</a>
-                         <a href="EsqueciSenha.html" class="esqueci-senha"><br>Esqueci minha senha</a>
+                         <a href="/ecotech/cliente/senha" class="esqueci-senha"><br>Esqueci minha senha</a>
                     </div>
                     
                     <br><br><br><br>
