--- a/ecotech2/src/main/resources/templates/VisualizarProduto.html
+++ b/ecotech2/src/main/resources/templates/VisualizarProduto.html
@@ -52,13 +52,13 @@
         <div class="visu_main" style="display: flex; flex-direction: row; margin: 5%; margin-bottom: 0;">
             <div class="visu_div" style="display: flex; flex-direction:row; width: 40%; ">
                 
-                <img src="/img/img1.jpg" style="width: 85%; border-radius: 10px;">
+                <img src="/img/prod2.jpeg" style="width: 85%; border-radius: 10px;">
               
                  
             </div>
             <div class="visu_div"  style="display: flex; flex-direction:column; width: 50%; ">
                 <div style="border-bottom: solid rgb(194, 194, 194); text-align: start;">
-                    <h2 style="text-align: start; margin: 1%;">nome produto </h2>
+                    <h2 style="text-align: start; margin: 1%;">FairPhone </h2>
                     <p style="color: #9add6e; margin: 1%;">R$ 1000,00   <a href="#" class="visu_Icon"><i class="fa-solid fa-heart"></i></a></p>
                     
                     <br>
