--- a/ecotech2/src/main/resources/templates/busca.html
+++ b/ecotech2/src/main/resources/templates/busca.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <header>
-        <div class="header_green"> <a href="/ecotech/cliente/perfil">Perfil</a> </div>
+        <div class="header_green"> <a href="/ecotech/cliente/index">Home</a> </div>
         <div class="header_black">
             <img src="/img/echoTech2.png" id="logo">
             <form>
@@ -72,25 +72,24 @@
         <br><h2>Você pesquisou por: ******</h2><br><br><br><br>
         <div class="searchProduct-list">
             <div class="search_itenContent">
-                <img src="\img\img3.jpg" alt="Produto 1" class="product-image">
-                <p>Produto 1</p>
+                <img src="/img/prod6.jpeg" alt="Produto 1" class="product-image">
+                <h4>eco fone</h4>
+                    <p>R$50.00</p>
                <a href="/ecotech/cliente/visualizar" class="view-button">Visualizar Produto</a>    
             </div><br>
             <div class="search_itenContent">
-                <img src="\img3.jpg" alt="Produto 2" class="product-image">
-                <p>Produto 2</p>
+                <img src="/img/prod7.jpeg" alt="Produto 2" class="product-image">
+                <h4>eco fone sem fio</h4>
+                    <p>R$50.00</p>
                 <a href="/ecotech/cliente/visualizar" class="view-button">Visualizar Produto</a>  
             </div><br>
             <div class="search_itenContent">
-                <img src="\img3.jpg" alt="Produto 3" class="product-image">
-                <p>Produto 3</p>
+                <img src="/img/prod8.jpeg" alt="Produto 3" class="product-image">
+                 <h4>eco headset sem fio</h4>
+                    <p>R$50.00</p>
                 <a href="/ecotech/cliente/visualizar" class="view-button">Visualizar Produto</a>  
             </div><br>
-            <div class="search_itenContent">
-                <img src="\img3.jpg" alt="Produto 4" class="product-image">
-                <p>Produto 4</p>
-                <a href="/ecotech/cliente/visualizar" class="view-button">Visualizar Produto</a>  
-            </div>
+            
             <br><br><br><br>
         </div>
     </main>
