--- a/ecotech2/src/main/resources/templates/Carrinho.html
+++ b/ecotech2/src/main/resources/templates/Carrinho.html
@@ -13,7 +13,9 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    
+    <style>
+		main img{background-color: #000; width: 100%; border-radius: 5px; width: 13vw; height: 13vw; object-fit:fill; text-align: center; margin: 0 auto;}
+	</style>
   </head>
   <body>
     <header>
@@ -67,10 +69,10 @@
               <tr>
                 <td>
                   <div class="product">
-                    <img src="https://picsum.photos/100/120" alt="" />
+                    <img src="/img/prod2.jpeg"  alt="" />
                     <div class="info">
-                      <div class="name">Nome do produto</div>
-                      <div class="category">Categoria</div>
+                      <div class="name">Fairphone</div>
+                      <div class="category">Com um visual totalmente repaginado e mais ..</div>
                     </div>
                   </div>
                 </td>
@@ -90,10 +92,10 @@
               <tr>
                 <td>
                   <div class="product">
-                    <img src="https://picsum.photos/100/120" alt="" />
+                   <img src="/img/prod4.jpeg"  alt="" />
                     <div class="info">
-                      <div class="name">Nome do produto</div>
-                      <div class="category">Categoria</div>
+                      <div class="name">Mini carregador solar</div>
+                      <div class="category">Com um visual totalmente repaginado e mais ..</div>
                     </div>
                   </div>
                 </td>
@@ -113,10 +115,10 @@
               <tr>
                 <td>
                   <div class="product">
-                    <img src="https://picsum.photos/100/120" alt="" />
+                   <img src="/img/prod5.jpeg"  alt="" />
                     <div class="info">
-                      <div class="name">Nome do produto</div>
-                      <div class="category">Categoria</div>
+                      <div class="name">controle remoto <br>com energia solar</div>
+                      <div class="category">Com um visual totalmente repaginado e mais ..</div>
                     </div>
                   </div>
                 </td>
