--- a/ecotech2/src/main/resources/templates/Favorito.html
+++ b/ecotech2/src/main/resources/templates/Favorito.html
@@ -13,90 +13,126 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    
+      <style>
+		main img{background-color: #000; width: 100%; border-radius: 5px; width: 13vw; height: 13vw; object-fit:fill; text-align: center; margin: 0 auto;}
+	</style>
   </head>
   <body>
     <header>
-        <div class="header_green"> <a href="#">Seja bem vindo de volta <i>nome usuário</i></a> </div>
+      <div class="header_green"> <a th:href="@{/ecotech/cliente/index}">Home</a> </div>
         <div class="header_black">
-            <img src="echoTechLogo4.png" id="logo">
-            <form>
-                <input type="search" id="pesquisa" placeholder="Pesquise aqui">
-                <input type="submit" id="btnPesquisa" value="pesquisar">
-            </form>
+          <img src="/img/echoTech2.png" id="logo">
+          <form>
+              <input type="search" id="pesquisa" placeholder="Pesquise aqui">
+              <input type="submit" id="btnPesquisa" value="pesquisar">
+          </form>
 
-            <div class="icons">
-                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                <a href="#"><i class="fa-solid fa-heart"></i></a>
-                
-                <div class="dropdown">
-                    <a  class="dropdown-button"><i class="fa-solid fa-bars"></i></a>
-                    <div class="dropdown-content">
-                        <a href="#">Smartphones</a>
-                        <a href="#">Notebooks</a>
-                        <a href="#">Smartwatches e Buds</a>
-                        <a href="#">Tablets</a>
-                        <a href="#">Acessórios</a>
-                        <a href="#">TV e AV</a>
-                        <a href="#">Eletrodomésticos</a>
-                        <a href="#">Monitores</a>
-                        <a href="#">Ar-condicionádos</a>
-                    </div>
-                </div>
-    
-            </div>
-            
-        </div>
+          <div class="icons">
+              <a href="/ecotech/cliente/carrinho"><i class="fa-solid fa-cart-shopping"></i></a>
+              <a href="/ecotech/cliente/favorito"><i class="fa-solid fa-heart"></i></a>
+              
+              <div class="dropdown">
+                  <a  class="dropdown-button"><i class="fa-solid fa-bars"></i></a>
+                  <div class="dropdown-content">
+                      <a href="/ecotech/cliente/categoria">Smartphones</a>
+                      <a href="/ecotech/cliente/categoria">Notebooks</a>
+                      <a href="/ecotech/cliente/categoria">Smartwatches e Buds</a>
+                      <a href="/ecotech/cliente/categoria">Tablets</a>
+                      <a href="/ecotech/cliente/categoria">Acessórios</a>
+                      <a href="/ecotech/cliente/categoria">TV e AV</a>
+                      <a href="/ecotech/cliente/categoria">Eletrodomésticos</a>
+                      <a href="/ecotech/cliente/categoria">Monitores</a>
+                      <a href="/ecotech/cliente/categoria">Ar-condicionádos</a>
+                  </div>
+              </div>
+              
+          </div>
+          
+      </div>
 
     </header>
     <main>
       <div class="page-title">Favoritos</div>
       <div class="content">
-        <section>
+         <section>
           <table>
             <thead>
               <tr>
                 <th>Produto</th>
                 <th>Preço</th>
+                <th>Quantidade</th>
+                <th>Total</th>
+                <th>-</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>
                   <div class="product">
-                    <img src="https://picsum.photos/100/120" alt="" />
+                    <img src="/img/prod2.jpeg"  alt="" />
                     <div class="info">
-                      <div class="name">Nome do produto</div>
-                      <div class="category">Categoria</div>
+                      <div class="name">Fairphone</div>
+                      <div class="category">Com um visual totalmente repaginado e mais ..</div>
                     </div>
                   </div>
                 </td>
                 <td>R$ 120</td>
+                <td>
+                  <div class="qty">
+                    <button><i class="bx bx-minus"></i></button>
+                    <span>2</span>
+                    <button><i class="bx bx-plus"></i></button>
+                  </div>
+                </td>
+                <td>R$ 240</td>
+                <td>
+                  <button class="remove"><i class="bx bx-x"></i></button>
+                </td>
               </tr>
               <tr>
                 <td>
                   <div class="product">
-                    <img src="https://picsum.photos/100/120" alt="" />
+                   <img src="/img/prod4.jpeg"  alt="" />
                     <div class="info">
-                      <div class="name">Nome do produto</div>
-                      <div class="category">Categoria</div>
+                      <div class="name">Mini carregador solar</div>
+                      <div class="category">Com um visual totalmente repaginado e mais ..</div>
                     </div>
                   </div>
                 </td>
                 <td>R$ 120</td>
+                <td>
+                  <div class="qty">
+                    <button><i class="bx bx-minus"></i></button>
+                    <span>2</span>
+                    <button><i class="bx bx-plus"></i></button>
+                  </div>
+                </td>
+                <td>R$ 240</td>
+                <td>
+                  <button class="remove"><i class="bx bx-x"></i></button>
+                </td>
               </tr>
               <tr>
                 <td>
                   <div class="product">
-                    <img src="https://picsum.photos/100/120" alt="" />
+                   <img src="/img/prod5.jpeg"  alt="" />
                     <div class="info">
-                      <div class="name">Nome do produto</div>
-                      <div class="category">Categoria</div>
+                      <div class="name">controle remoto <br>com energia solar</div>
+                      <div class="category">Com um visual totalmente repaginado e mais ..</div>
                     </div>
                   </div>
                 </td>
                 <td>R$ 120</td>
                 <td>
+                  <div class="qty">
+                    <button><i class="bx bx-minus"></i></button>
+                    <span>2</span>
+                    <button><i class="bx bx-plus"></i></button>
+                  </div>
+                </td>
+                <td>R$ 240</td>
+                <td>
+                  <button class="remove"><i class="bx bx-x"></i></button>
                 </td>
               </tr>
             </tbody>
