--- a/ecotech2/src/main/resources/templates/index.html
+++ b/ecotech2/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
         <div class="header_green"> <a href="/ecotech/cliente/perfil">Perfil</a> </div>
         <div class="header_black">
             <img src="/img/echoTech2.png" id="logo">
-            <form>
+            <form th:action="@{/ecotech/cliente/busca}" method="post">
                 <input type="search" id="pesquisa" placeholder="Pesquise aqui">
                 <input type="submit" id="btnPesquisa" value="pesquisar">
             </form>
@@ -53,19 +53,19 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="/img/img1.jpg" >
+                <img src="/img/banner1.jpeg" >
                 
                 </div>
             
                 <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="/img/img2.jpg">
+                <img src="/img/banner2.jpeg">
                 
                 </div>
             
                 <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="/img/img3.jpg">
+                <img src="/img/banner3.jpeg">
                
                 </div>
             
@@ -86,34 +86,34 @@
             <div class="inicio_fileira">
 
                 <div class="inicio_itenContent">
-                    <img src="/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
+                    <img src="/img/prod2.jpeg" alt="">
+                    <h3>FairPhone</h3>
+                    <p>R$1000.00</p>
                     <br>
-                    <a href="" class="comprar">Comprar Agora!</a>
+                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                 </div>
                 <div class="inicio_itenContent">
-                    <img src="/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
+                    <img src="/img/prod3.jpeg" alt="">
+                    <h3>Carregador solar</h3>
+                    <p>R$50.00</p>
                     <br>
                     <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
                     <br>
                 </div>
                 <div class="inicio_itenContent">
-                    <img src="/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
+                    <img src="/img/prod4.jpeg" alt="">
+                    <h3>Mini carregador solar</h3>
+                    <p><p><span style="text-decoration:line-through; font-size: 80%;">R$50.00</span>R$40.00</p>
                     <br>
                     <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
                     <br>
                 </div>
                 <div class="inicio_itenContent">
-                    <img src="/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
+                    <img src="/img/prod5.jpeg" alt="">
+                    <h3>Controle com bateria solar</h3>
+                    <p>R$50.00</p>
                     <br>
                     <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
@@ -127,34 +127,34 @@
             <div class="inicio_fileira">
 
                 <div class="inicio_itenContent">
-                    <img src="/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
+                    <img src="/img/prod9.jpeg" alt="">
+                    <h3>PowerBank</h3>
+                    <p><span style="text-decoration:line-through; font-size: 80%;">R$100.00</span> R$90.00</p>
                     <br>
                     <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                 </div>
                 <div class="inicio_itenContent">
-                    <img src="/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
-                    <br>
-                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
-                  
-                    <br>
-                </div>
-                <div class="inicio_itenContent">
-                    <img src="/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
+                    <img src="/img/prod8.jpeg" alt="">
+                    <h3>eco headset</h3>
+                    <p><p><span style="text-decoration:line-through; font-size: 80%;">R$100.00</span> R$50.00</p>
                     <br>
                     <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
                     <br>
                 </div>
                 <div class="inicio_itenContent">
-                    <img src="/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
+                    <img src="/img/prod4.jpeg" alt="">
+                    <h3>Mini carregador solar</h3>
+                    <p><p><span style="text-decoration:line-through; font-size: 80%;">R$50.00</span>R$40.00</p>
+                    <br>
+                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
+                  
+                    <br>
+                </div>
+                <div class="inicio_itenContent">
+                    <img src="/img/prod5.jpeg" alt="">
+                    <h3>Controle com bateria solar</h3>
+                    <p>R$50.00</p>
                     <br>
                     <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
@@ -168,34 +168,34 @@
             <div class="inicio_fileira">
 
                 <div class="inicio_itenContent">
-                    <img src="/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
+                    <img src="/img/prod2.jpeg" alt="">
+                    <h3>FairPhone</h3>
+                    <p>R$1000.00</p>
                     <br>
                     <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                 </div>
                 <div class="inicio_itenContent">
-                    <img src="/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
-                    <br>
-                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
-                  
-                    <br>
-                </div>
-                <div class="inicio_itenContent">
-                    <img src="/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
+                    <img src="/img/prod3.jpeg" alt="">
+                    <h3>Carregador solar</h3>
+                    <p>R$50.00</p>
                     <br>
                     <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
                     <br>
                 </div>
                 <div class="inicio_itenContent">
-                    <img src="/img/img1.jpg" alt="">
-                    <h3>Nome produto</h3>
-                    <p>R$00.00</p>
+                    <img src="/img/prod4.jpeg" alt="">
+                    <h3>Mini carregador solar</h3>
+                    <p><p><span style="text-decoration:line-through; font-size: 80%;">R$50.00</span>R$40.00</p>
+                    <br>
+                    <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
+                  
+                    <br>
+                </div>
+                <div class="inicio_itenContent">
+                    <img src="/img/prod5.jpeg" alt="">
+                    <h3>Controle com bateria solar</h3>
+                    <p>R$50.00</p>
                     <br>
                     <a href="/ecotech/cliente/visualizar" class="comprar">Comprar Agora!</a>
                   
